# quantlab

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: conf.py  design_decisions.rst  index.rst
docs/api/: compute.rst  data.rst  models.rst  portfolio.rst  streaming.rst  viz.rst
docs/tutorials/: backtesting.rst  forecasting.rst  getting_started.rst
examples/: end_to_end.ipynb
reports/: backtest_metrics.csv  sample_prices.csv  summary.json
scripts/: generate_reports.py
src/quantlab/: __init__.py  _logging.py  cli.py  exceptions.py
src/quantlab/compute/: __init__.py  backtest.py  montecarlo.py  optimal_execution.py  rolling.py  sector_aggregate_mr.py
src/quantlab/data/: __init__.py  base.py  cache.py  sql_layer.py  wiki_constituents.py  yfinance_source.py
src/quantlab/models/: __init__.py  evaluation.py  features.py  forecaster.py
src/quantlab/portfolio/: __init__.py  markowitz.py
src/quantlab/streaming/: __init__.py  median.py  topk.py  welford.py
src/quantlab/viz/: __init__.py  correlation.py  drawdown.py  returns.py
tests/: conftest.py  test_cli.py  test_compute.py  test_data.py  test_models.py  test_portfolio.py  test_streaming.py  test_viz.py
tests/fixtures/: wiki_sp500_sample.html
