[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantlab"
version = "0.1.0"
description = "Reproducible equity-analysis pipeline for Yahoo Finance: streaming/rolling risk metrics, parallel backtests, and benchmark ML forecasts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Kai Zhang" }]
keywords = ["finance", "quant", "backtest", "yahoo", "scikit-learn", "multiprocessing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pyyaml>=6.0",
    "mrjob>=0.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.80",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.scripts]
quantlab = "quantlab.cli:main"

[project.urls]
Homepage = "https://github.com/kzhang-cornell/quantlab"

[tool.hatch.build.targets.wheel]
packages = ["src/quantlab"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --doctest-modules --doctest-ignore-import-errors"
testpaths = ["tests", "src/quantlab"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/quantlab"]
branch = true
omit = ["src/quantlab/cli.py", "src/quantlab/_logging.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
